# template

./: .clang-format  .clang-tidy  .clangd  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  build.cmd  format.cmd  make.cmd  makefile  ports.txt  readme.md  vcpkg-configuration.json  vcpkg.json
app/: .gitignore  CMakeLists.txt  license.txt  make.cmd  readme.md
app/src/: config.hpp.in  main.aps  main.cpp  main.rc
app/src/app/: test.cpp  test.hpp
include/core/: core.hpp  test.hpp
lib/: .clang-format  .gitignore  CMakeLists.txt  makefile  ports.txt  readme.md
lib/include/lib/: test.hpp
lib/src/: config.hpp.in  main.cpp  main.rc
lib/src/benchmark/: benchmark.cpp
lib/src/lib/: test.cpp
lib/src/tests/: test.cpp
res/: format.cmake  toolchain-coverage.cmake  toolchain-lint.cmake  toolchain.cmake  vcpkg.cmake  version.h.in
res/cmake/: tzdata.cmake
res/triplets/: company-windows-x86-debug.cmake  x64-debug.cmake  x64-release.cmake  x86-release.cmake
src/: benchmark.cpp  benchmarks.cpp  main.cpp  main.manifest  main.rc  main.rc.in  tests.cpp
src/benchmark/: core.cpp
src/company/: random.cpp  random.hpp
src/core/: core.cpp  random.cpp  random.hpp  test.cpp
src/core/benchmarks/: random.cpp
src/core/tests/: random.cpp
src/tests/: core.cpp
